--- a/src/main/webapp/error.html
+++ b/src/main/webapp/error.html
@@ -5,11 +5,16 @@ and open the template in the editor.
 <!DOCTYPE html>
 <html>
     <head>
+         <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <title>Login Error</title>
     </head>
     <body>
+        <div class="jumbotron">
         <h2>Invalid user name or password.</h2>
 
         <p><a href="login.html">Return to login page</a></p>
+        </div>
     </body>
 </html>
