--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,17 +2,25 @@
 <html>
     <head>
         <title>Online Clothing store</title>
+        <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
+        <div class="container">
+
+<div class="jumbotron">
         <h1>Welcome to Online Clothing store</h1>
         <h2> Please select the below options</h2>
         <ul>
             <li> If you are a customer select the below link </li>
-            <li><a href = "http://localhost:8080/llokesh-mp4-ejb/customerPortal/login.html">customer</a></li>
+            <li><a href = "http://localhost:8080/llokesh-mp4-ejb/customerPortal/">customer</a></li>
             <li> If you are a manufacturer select the below link</li>
-            <li><a href = "http://localhost:8080/llokesh-mp4-ejb/productPortal/login.html"> manufacturer</a></li>
+            <li><a href = "http://localhost:8080/llokesh-mp4-ejb/productPortal/"> manufacturer</a></li>
             
         </ul>
+</div>
+        </div>
     </body>
 </html>
