--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,7 +15,7 @@
         <h2> Please select the below options</h2>
         <ul>
             <li> If you are a customer select the below link </li>
-            <li><a href = "http://localhost:8080/llokesh-mp4-ejb/customerPortal/">customer</a></li>
+            <li><a href ="http://localhost:8080/llokesh-mp4-ejb/customerPortal/">Customer</a></li>
             <li> If you are a manufacturer select the below link</li>
             <li><a href = "http://localhost:8080/llokesh-mp4-ejb/productPortal/"> manufacturer</a></li>
             
